# ensodb

./: .gitignore  Cargo.toml  README.md
install/linux/: install.sh
install/windows/: install.bat
src/: api.rs  client.rs  codec.rs  engine.rs  error.rs  main.rs  pretty.rs  record.rs  repl.rs  schema.rs  storage.rs  tcp.rs  types.rs  utils.rs
src/sql/: ast.rs  lexer.rs  parser.rs
src/tests/: mod.rs  segment_compaction.rs
